<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lLDetailsList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/detailRelativeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_view_default_padding">

        <ImageView
            android:id="@+id/imageVictim"
            android:layout_width="@dimen/detail_view_image_size"
            android:layout_height="@dimen/detail_view_image_size"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/detail_view_image_margin_top"
            android:contentDescription="@string/contentDescription_photo_of_the_victim" />

        <TextView
            android:id="@+id/textviewVictimName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_view_default_padding"
            android:layout_toEndOf="@id/imageVictim"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_view_headline_textSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textviewVictimBornDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_view_default_padding"
            android:layout_marginTop="@dimen/detail_view_victim_dates_margin_top"
            android:layout_toEndOf="@id/imageVictim"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_view_default_textSize" />

        <TextView
            android:id="@+id/textviewVictimDeathDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_view_default_padding"
            android:layout_marginTop="@dimen/detail_view_victim_dates_death_margin_top"
            android:layout_toEndOf="@id/imageVictim"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_view_default_textSize" />

        <TextView
            android:id="@+id/textviewVictimAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_view_default_padding"
            android:layout_marginTop="@dimen/detail_view_victim_address_margin_top"
            android:layout_toEndOf="@id/imageVictim"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_view_default_textSize" />

        <TextView
            android:id="@+id/textviewVictimDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_view_default_padding"
            android:layout_marginTop="@dimen/detail_view_victim_description"
            android:layout_toEndOf="@id/imageVictim"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_view_default_textSize" />

        <RadioButton
            android:id="@+id/saveDataSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_view_store_dataset_margin_start"
            android:layout_marginTop="@dimen/detail_view_store_dataset_margin_top"
            android:text="@string/detail_store_dataset"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_view_default_textSize" />

        <ImageView
            android:id="@+id/wwwImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_view_www_margin_start"
            android:layout_marginTop="@dimen/detail_view_www_margin_top"
            android:contentDescription="@string/contentDescription_WWW_icon"
            android:src="@drawable/www" />

    </RelativeLayout>

    <!-- A separator line for each element -->
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginEnd="@dimen/detail_view_default_padding"
        android:layout_marginStart="@dimen/detail_view_default_padding"
        android:layout_marginTop="@dimen/detail_view_default_padding"
        android:background="@color/colorAccent" />

</LinearLayout>